// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModalFeedback > renders negative style; no title and text content 1`] = `
<body>
  <div>
    <div
      class="qti-modalFeedback x-tao-modalFeedback-negative"
    >
      <div
        class="content"
      >
        <h2
          class="ui-heading-l"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="icon large"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <title>
              Warning unframed icon
            </title>
            <path
              clip-rule="evenodd"
              d="M14 2H10V15H14V2ZM14 18H10V22H14V18Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            
          </svg>
          
           
          <span
            class="visually-hidden"
          >
            Response feedback
          </span>
          
        </h2>
         
        
        
        
        <div
          class="x-tao-wrapper x-tao-modalFeedback-positive x-tao-relatedOutcome-RESPONSE_1"
        >
          Bad content
        </div>
        
        
        
        
      </div>
    </div>
    
    
  </div>
</body>
`;

exports[`ModalFeedback > renders neutral style; title and complex content 1`] = `
<body>
  <div>
    <div
      class="qti-modalFeedback"
    >
      <div
        class="content"
      >
        <h2
          class="ui-heading-l"
          tabindex="-1"
        >
          
           
          <span>
            Neutral title
          </span>
          
        </h2>
         
        
        
        
        <div
          class="x-tao-wrapper x-tao-relatedOutcome-RESPONSE"
        >
          
          
          
          
          Neutral content
          
          
          
          
          
        </div>
        
        
        
        
      </div>
    </div>
    
    
  </div>
</body>
`;

exports[`ModalFeedback > renders positive style; title and no content 1`] = `
<body>
  <div>
    <div
      class="qti-modalFeedback x-tao-modalFeedback-positive"
    >
      <div
        class="content"
      >
        <h2
          class="ui-heading-l"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="icon large"
            viewBox="0 0 24 24"
          >
            <title>
              Checkbox check icon
            </title>
            <path
              d="M5.57 8.79 10.71 13.93 18.43 4.93 21 7.5 10.71 19.07 3 11.36 5.57 8.79z"
            />
            
          </svg>
          
           
          <span>
            Good title
          </span>
          
        </h2>
         
        
        
        
        <div
          class="x-tao-wrapper x-tao-relatedOutcome-RESPONSE_1"
        />
        
        
        
        
      </div>
    </div>
    
    
  </div>
</body>
`;
